<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.avereon.pom</groupId>
		<artifactId>jar</artifactId>
		<version>3.1.0-SNAPSHOT</version>
	</parent>

	<groupId>com.avereon</groupId>
	<artifactId>acorn</artifactId>
	<version>1.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Acorn</name>
	<description>Simple system profiling utility</description>
	<inceptionYear>2018</inceptionYear>

	<developers>
		<developer>
			<name>Mark Soderquist</name>
			<email>mark@soderquist.net</email>
			<roles>
				<role>Architect</role>
			</roles>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>avn</id>
			<url>https://repo.avereon.com/avn</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>avn</id>
			<url>https://repo.avereon.com/avn</url>
		</pluginRepository>
	</pluginRepositories>

	<properties>
		<!-- Needs to stay at an LTS version -->
		<java.version>11</java.version>
		<images-folder>target/main/images</images-folder>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.avereon</groupId>
			<artifactId>zevra</artifactId>
			<version>[0.1,)</version>
		</dependency>

	</dependencies>

	<build>
		<sourceDirectory>source/main/java</sourceDirectory>
		<testSourceDirectory>source/test/java</testSourceDirectory>

		<resources>
			<resource>
				<directory>source/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<attach>false</attach>
					<finalName>product</finalName>
  				<appendAssemblyId>false</appendAssemblyId>
					<archive>
						<manifest>
							<mainClass>com.avereon.acorn.Program</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<!-- Version comes from parent -->
				<configuration>
					<!-- The argLine and systemPropertyVariables should match the failsafe configuration below -->
					<argLine>
						--add-opens=com.avereon.acorn/com.avereon.acorn=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>

		</plugins>

	</build>

</project>

